App/pod.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: meupod-azul
  labels:
    cor: azul
spec:
  containers:
    - name: site
      image: fabricioveronez/web-page:blue
      ports:
      - containerPort: 80
---
apiVersion: v1
kind: Pod 
metadata:
  name: meupod-verde
  labels:
    cor: verde
spec:
  containers:
    - name: site
      image: fabricioveronez/web-page:blue
      ports:
      - containerPort: 80
