App/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meudeployment
spec:
  replicas: 4 
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: site
        image: fabricioveronez/web-page:green
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-page
spec:
  selector: 
    app: web # indica quais os pods alvo referenciados pela label.
  ports:
    - port: 80
      protocol: TCP
      nodePort: 30001 # força a porta a usar
  type: NodePort # seleciona o tipo de service que sera usado
