App/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-color
spec:
  selector: 
    app: web-color # indica quais os pods alvo referenciados pela label.
  ports:
    - port: 80
      #targetPort: 80
  type: LoadBalancer # seleciona o tipo de service que sera usado
