App/ingress-web-color.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-color-ingress #nome do ingress
  namespace: web-color
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: webcolor-thiago.net #endereço do host alvoo
    http:
      paths:
       - path: "/color"
         pathType: Prefix
         backend:
          service:
            name: color
            port:
              number: 80
