App/ingress_web-color.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-color-ingress #nome do ingress
  namespace: web-color
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: webcolor-thiago.net #endereço do host alvo
    http:
      paths:
       - path: /
         pathType: Prefix
         backend:
          service:
            name: color
            port:
              number: 80
